fixed bug with image overflow

--- a/owner/owner-client/src/app/_components/image-with-delete/image-with-delete.component.css
+++ b/owner/owner-client/src/app/_components/image-with-delete/image-with-delete.component.css
@@ -8,6 +8,7 @@
   background-color: black;
   border-radius: 5px;
   cursor: pointer;
+  overflow: hidden;
 }
 
 .image-wrapper > button {
